test/syntax-errors/operande_entier1.sos
# operande entier incorrecte

id[a] = 2